[package]
name = "bevy_dfdx_cart_pole"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
dfdx = "0.9"
bevy = "0.8.1"
rand = "0.8"
